--- a/anybuy/admin/templates/AdminIndex.html
+++ b/anybuy/admin/templates/AdminIndex.html
@@ -251,9 +251,9 @@ float:left;
 			<div class="div3">
 				<ul>
 					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('/top5/');">top5 Stores</a></li>
+						onClick="openurl('/top5/');">top5 Stores</a></li><!-- 
 					<li><a class="a" href="javascript:void(0);"
-						onClick="openurl('/top10/');">Top 10 Products</a></li>
+						onClick="openurl('/top10/');">Top 10 Products</a></li> -->
 				</ul>
 			</div>
 			<div class="div2">
