--- a/anybuy/admin/templates/AllCustomer.html
+++ b/anybuy/admin/templates/AllCustomer.html
@@ -48,10 +48,10 @@
     <table class="table table-bordered table-hover definewidth m10">
         <thead>
             <tr>
-                <th>SellerName</th>
-                <th>SellerTelephone</th>
-                <th>SellerEmail</th>
-                <th>SellerAddress</th>
+                <th>CustomerName</th>
+                <th>CustomerTelephone</th>
+                <th>CustomerEmail</th>
+                <th>CustomerAddress</th>
             </tr>
         </thead>
         {% for customer in customerlist %}
