--- a/anybuy/admin/templates/sBlackList.html
+++ b/anybuy/admin/templates/sBlackList.html
@@ -35,14 +35,11 @@
     </style>
 </head>
 <body >
-    <form class="form-inline definewidth m20" action="#" method="get"> <font color="#777777"><strong>SellerName：</strong></font> 
-        <input type="text" name="sellerName" id="menuname"class="abc input-default" placeholder="" value="">
+    <form class="form-inline definewidth m20" action="/querysblacklist/" method="get"> <font color="#777777"><strong>SellerAccount：</strong></font> 
+        <input type="text" name="sellerAccount" id="menuname" class="abc input-default" placeholder="selleraccount">
         &nbsp;&nbsp;
         <button type="submit" class="btn btn-primary">Query</button>
         &nbsp;&nbsp;
-        <button type="button" class="btn btn-default"  id="addnew">
-            <a href="videosAdd.html">Add</a>
-        </button>
     </form>
     <div>
         <h3 style="text-align: center;color: #3a87ad">Seller BlackList</h3>
@@ -70,16 +67,17 @@
             <td>
             &nbsp;&nbsp;&nbsp;
                 <form action="/addsblacklist/" style="display: inline-block;">
-                    <input type="hidden" name="sellerId" value="{{seller.id}}">
-                    <button class="btn btn-default" type="submit">Del</button>
-                </form>
-                &nbsp;&nbsp;&nbsp;
-                <form action="/delsblacklist/" style="display: inline-block;">
-                    <input type="hidden" name="sellerId" value="{{seller.id}}">
-                    <button class="btn btn-default" type="submit">Del</button>
+                    <input type="hidden" name="sellerAccount" value="{{seller.SellerAccount}}">
+                    <button id="{{seller.id}}" class="btn btn-default" type="submit">{{IsIn}}</button>
                 </form>
             </td>
-
+                <script type="text/javascript">
+                    if ($('#{{seller.id}}').html().toLowerCase()=='0') {
+                        $('#{{seller.id}}').html("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;add&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
+                    }else{
+                        $('#{{seller.id}}').html("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;del&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
+                    }
+                    </script>
         </tr>
         {% endfor %}
     </table>
