--- a/anybuy/store/templates/Customer_CommodityList.html
+++ b/anybuy/store/templates/Customer_CommodityList.html
@@ -95,7 +95,7 @@
 							<a href="/commodity/id/{{ commodity.id }}" style = "color:#3299CC">{{ commodity.CommodityName }}<!--这里是Commidity中的CommodityName--></a>
 						</td>
 						<td>
-							{{ commodity.SellPrice }} RMB	<!--这里是Commidity中的PurchasePrice-->
+							{{ commodity.SellPrice }} HK$	<!--这里是Commidity中的PurchasePrice-->
 						</td>
 					</tr>
                     {% endfor %}
@@ -138,7 +138,7 @@
     						</a>
                         </td>
 						<td>
-							{{ commodity.SellPrice }} RMB	<!--这里是Commidity中的PurchasePrice-->
+							{{ commodity.SellPrice }} HK$	<!--这里是Commidity中的PurchasePrice-->
 						</td>
 					</tr>
                     {% endfor %}
@@ -179,7 +179,7 @@
 						    </a>
                         </td>
 						<td>
-							{{ commodity.SellPrice }} RMB	<!--这里是Commidity中的PurchasePrice-->
+							{{ commodity.SellPrice }} HK$	<!--这里是Commidity中的PurchasePrice-->
 						</td>
 					</tr>
                     {% endfor %}
@@ -202,14 +202,14 @@
         
         <img  src="/file/images/cap6.jpg"  style = "width:200px; height:200px" /><!--这里是Commidity中的Commodityimage-->
          <!-- <div class='text-left '>
-                        <small class='text-muted yanse'>Price:66.95 RMB</small>
+                        <small class='text-muted yanse'>Price:66.95 HK$</small>
           </div>
         
         <p></p>
         
         <img alt="400x400" src="/file/images/cap7.jpg" style = "width:200px; height:200px"/>
          <div class='text-left '>
-                        <small class='text-muted yanse'>Price:66.95 RMB</small>
+                        <small class='text-muted yanse'>Price:66.95 HK$</small>
                     </div> 
 		</div>-->
 	</div>
